; ModuleID = '/home/carl/AnghaBench/libgit2/deps/ntlmclient/extr_ntlm.c_generate_odd_parity.c'
source_filename = "/home/carl/AnghaBench/libgit2/deps/ntlmclient/extr_ntlm.c_generate_odd_parity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**)* @generate_odd_parity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @generate_odd_parity(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i64, align 8
  store i32** %0, i32*** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %21, %1
  %5 = load i64, i64* %3, align 8
  %6 = icmp ult i64 %5, 8
  br i1 %6, label %7, label %24

7:                                                ; preds = %4
  %8 = load i32**, i32*** %2, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* %3, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @EVEN_PARITY(i32 %12)
  %14 = xor i32 1, %13
  %15 = load i32**, i32*** %2, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %14
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %7
  %22 = load i64, i64* %3, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %3, align 8
  br label %4

24:                                               ; preds = %4
  ret void
}

declare dso_local i32 @EVEN_PARITY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
